--- a/app/View/LoginPage/login.template.html
+++ b/app/View/LoginPage/login.template.html
@@ -27,10 +27,8 @@
                 <input type="submit" value="Log in">
             </div>
         </form>
-        {{!-- {{#if error}}
-        <div style="color:#ee0000;">
+        <div ng-show="false" style="color:#ee0000;">
             <span>{{message}}</span>
         </div>
-        {{/if}} --}}
     </section>
 </header>
