--- a/app/style/Login.css
+++ b/app/style/Login.css
@@ -1,42 +1,21 @@
-
-
-html {
-    font-family: 'Lato', 'Arial', sans-serif;
-    font-weight: 300;
-    text-rendering: optimizeLegibility;
-    font-size: 20px;
-    background-color: #F6F9FC;
+.loginPage {
+    width: 100%;
+    height: 100%;
+    background-color: #B8E5FB;
 }
 
-header {
-    margin: 13% 0;
-    background-color: #F6F9FC;
+.loginContainer {
+
 }
-
-
-/***********************************/
-
-
-/* Reused */
-
-
-/***********************************/
-
-
 
 .Login-btn,
 .Signup-btn {
-    /* position: absolute;
-    left: 50%; */
     text-align: center;
-    /* width: 50%; */
     font-size: 130%;
     text-decoration: none;
-    /* margin-top: 25px; */
     margin: 25px auto;
     align-content: center;
     border-radius: 7px;
-    /* border: 2px solid gray; */
     padding: 10px;
 }
 
@@ -75,6 +54,14 @@ h1 {
 
 /***********************************/
 
+.input-group {
+
+}
+
+.login-input {
+
+}
+
 .selection {
     text-align: center;
     margin: 30px auto;
@@ -88,43 +75,16 @@ h1 {
     text-decoration: none;
 }
 
-.Login-form {
-    /* font-size: 120%; */
+.loginForm {
     width: 30%;
     margin: 0 auto;
 }
 
 
-.usernameInput label,
-.passwordInput label{
-    font-size: 140%;
-    padding-top: 10px;
-    margin-left: 40px;
-
-}
-
-.usernameform input{
-    /* padding: 10px; */
-    width: 100%;
-    padding: 10px;
-    border-radius: 4px;
-    border: 1px dotted gray;
-}
-.passwordform input{
-    padding: 10px;
-    width: 100%;
-    padding: 10px;
-    border-radius: 4px;
-    border: 1px dotted gray;
-}
-.Conform label{
-    margin-top: -10px;
-}
-
 .Login-btn input,
-.Signup-btn input{
+.Signup-btn input {
     width: 50%;
-    color:white;
+    color: white;
     padding: 10px;
     font-size: 120%;
     border-radius: 4px;
