--- a/app/style/Login.css
+++ b/app/style/Login.css
@@ -3,10 +3,12 @@
     height: 100%;
     background-color: #B8E5FB;
     display: flex;
-
+    background-image: url('../resources/background-image.png');
+    position: absolute;
 }
 
 .loginContainer {
+    border-radius: 20px;
     margin: auto auto;
     display: inline-flex;
     flex-direction: column;
@@ -67,16 +69,16 @@ h1 {
 .input-group p {
     font-size: 25px;
     color: gray;
-    margin-bottom: 10px;
 }
 
 .login-input {
     width: 100%;
-    font-size: 15px;
-    padding: 10px;
-    border: 1px solid gray;
+    font-size: 20px;
+    height: 40px;
+    border: none;
     border-radius: 3px;
-    margin-bottom: 10px;
+    margin-bottom: 20px;
+    border-bottom: 1px solid gray;
 }
 
 .selection {
