--- a/app/style/Main.css
+++ b/app/style/Main.css
@@ -1,8 +1,62 @@
 .MainPage-Header {
+    padding: 0px 10%;
     height: 60px;
-    box-shadow: 0px 2px 2px rgba(117, 122, 130,0.5);
+    box-shadow: 0px 2px 2px rgba(117, 122, 130, 0.5);
     display: flex;
     flex-direction: row;
     align-items: center;
+    justify-content: space-between;
+}
 
+.MainPage-Header-Left, .MainPage-Header-Right {
+    display: flex;
+    flex-direction: row;
+    align-items: center;
+}
+
+
+.MainPage h3 {
+    padding: 10px;
+    font-weight: 400;
+}
+
+.MainPage-Searching-Input {
+    display: flex;
+    flex-direction: row;
+    align-items: center;
+}
+
+.MainPage-Searching-Input input {
+    padding: 7px;
+    font-size: 10px;
+    background-color: lightgray;
+    border-radius: 5px;
+    border: none;
+}
+
+.MainPage-AddQuestion-Button {
+    margin-left: 20px;
+    height: 30px;
+    width: 50px;
+    border-radius: 5px;
+    border: none;
+    background-color: rgb(0, 119, 230);
+    color: white;
+}
+
+/* Question Section */
+
+.MainPage-MainSection {
+    padding: 20px 10%;
+}
+
+.MainPage-QuestionSection {
+    background-color: white;
+    display: flex;
+    flex-direction: column;
+}
+
+.MainPage-QuestionCard-Container {
+    padding: 10px 10px;
+    border-bottom: 1px solid lightgray;
 }
